# guse

./: Cargo.toml  Makefile  README.md
.github/workflows/: release.yml
src/: main.rs
src/cli/: add.rs  add_ssh.rs  delete.rs  list.rs  list_ssh.rs  mod.rs  set_default.rs  show.rs  switch.rs  unset_default.rs  update.rs
src/config/: mod.rs
src/error/: mod.rs  tests.rs
src/git/: mod.rs
src/ui/: mod.rs
src/utils/: mod.rs
tests/: cli.rs
