[package]
name = "guse"
version = "0.0.1"
edition = "2021"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
colored = "2.1"
prettytable-rs = "0.10"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
dirs = "5.0"
lazy_static = "1.4"
regex = "1.10"
log = "0.4"
env_logger = "0.11"
chrono = "0.4"
dialoguer = "0.11"
